# zork

./: CMakeLists.txt  dinit.c  dsub.c  dverb2.c  gdt.c  np.c  pretty-zork.py  supp.c
